erDiagram
    CUSTOMER ||--o{ ORDER : places
    CUSTOMER {
        integer customer_id PK
        varchar email UK
        integer phone
        varchar first_name
        varchar last_name
    }
    ORDER {
        integer order_id PK
        integer address_id FK
        integer cust_id FK
        varchar date
        varchar status
    }
    ORDER_LINE {
        string sku FK
        integer order_id FK
        integer quantity
        float unit_price
    }
    PRODUCT {
        varchar sku PK
        varchar name
        double price
        integer stock
    }
    ADDRESS {
        integer address_id FK
        integer number
        varchar street_name
        integer zipcode
        varchar city
        varchar state
    }

    ORDER ||--|{ ORDER_LINE : contains
    ORDER_LINE |{--}o PRODUCT: contains
    CUSTOMER |{--}| ADDRESS: has

